--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-
+    - name: Archive the jar file
+      uses: actions/upload-artifact@v4
+      with:
+       name: dev-porject-jar
+       path: target/*.jar
