--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,5 +32,5 @@ jobs:
     - name: Archive the jar file
       uses: actions/upload-artifact@v4
       with:
-       name: dev-porject-jar
+       name: dev-project
        path: target/*.jar
